<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingBottom="@dimen/margin_large"
        tools:context="fabiohideki.com.resetpassword.ui.MainActivity"
        tools:showIn="@layout/activity_main">

        <TextView
            android:id="@+id/tv_sentence_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sentece_new_password"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/material_text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rules_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/new_password_rules"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/material_text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sentence_password" />

        <TextView
            android:id="@+id/tv_hint_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/hint_password"
            android:textColor="@color/secondary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rules_password" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv_change_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="@dimen/card_corner_radius_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_password">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_large"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <ImageView

                    android:id="@+id/iv_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/cd_img_lock"
                    android:src="@drawable/ic_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_new_password"
                    android:layout_width="0dp"
                    android:layout_height="78dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="24dp"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iv_lock"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:paddingTop="0dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_new_password_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="24dp"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_lock"
                    app:layout_constraintTop_toBottomOf="@+id/til_new_password">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_new_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/repeat_new_password"
                        android:inputType="textPassword"
                        android:paddingTop="0dp" />
                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/bt_confirm"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_selector"
            android:enabled="false"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_change_password" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>